Fix scrolling issue on mobile modal

--- a/src/static/pycontw-2017/styles/_modal.scss
+++ b/src/static/pycontw-2017/styles/_modal.scss
@@ -1,5 +1,8 @@
 body.popping-modal-open {
-	overflow: hidden;
+    .mother-wrapper {
+        height: 100%;
+        overflow: hidden;
+    }
 }
 
 .popping-card-modal {
